--- a/assets/css/login.styl
+++ b/assets/css/login.styl
@@ -3,19 +3,48 @@
 
 // The login form.
 #login
-    margin-top 50px
+    margin 0
+    padding 0
     text-align center
 
+    // Top text with logo.
+    .header
+        background rgb(255, 255, 255) url(../images/logo.jpg) no-repeat top
+        padding 30px 0 1px 0
+
+        h1
+            color darkTextColor
+            margin-top 70px
+            padding 0
+
+    // The login form box.
     form
         display block
-        margin auto
-        width 280px
+        margin 20px auto auto auto
+        padding-right 5px
+        width 260px
 
-    // Labels on the left.
-    label
-        display inline-block
-        width 90px
+        div
+            clear both
+
+        label
+            display inline-block
+            float left
+            margin-top 5px
+
+        input
+            float right
+
+        .forgot
+            float left
+            margin-top 20px
 
     // Login button.
     button.identify
-        margin-top 20px
+        margin-top 15px
+        float right
+
+    // Bottom div with more info
+    div.about
+        clear both
+        padding-top 50px
