General refactoring. Creating the login page.

--- a/assets/css/login.styl
+++ b/assets/css/login.styl
@@ -35,7 +35,8 @@
         input
             float right
 
-        .forgot
+        #forgot
+            cursor pointer
             float left
             margin-top 20px
 
