--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,6 @@
 !!! 5
+!= js("basejs")
+!= js("view/loginView")
 != css("appcss")
 html
     head
@@ -20,5 +22,5 @@ html
                 button.identify Validate
 
         div.about
-            p.
-                This software is based on the System App by Zalando, a free and open source tool.
+            p This software is based on the System App by Zalando, a free and open source tool.
+            a(href="http://systemapp.io") More info about the System App...
