LDAP integration now works with Node 0.8 and 0.10. Improved login page. Added "connect-flash" for auth messages. Updated package.json with prepublish script.

--- a/assets/css/login.styl
+++ b/assets/css/login.styl
@@ -49,3 +49,9 @@
     div.about
         clear both
         padding-top 50px
+
+    // Error message in red.
+    .error
+        color errorLightColor
+        font-weight bold
+        padding 10px
