--- a/views/login.jade
+++ b/views/login.jade
@@ -20,6 +20,8 @@ html
             div
                 a#forgot Forgot credentials?
                 button.identify Validate
+            if flash && flash.error
+                div.error #{flash.error}
 
         div.about
             p This software is based on the System App by Zalando, a free and open source tool.
