LDAP users will now be created on the MongoDB if they don't exist. The security module and auth were improved a lot.

--- a/views/login.jade
+++ b/views/login.jade
@@ -20,8 +20,8 @@ html
             div
                 a#forgot Forgot credentials?
                 button.identify Validate
-            if flash && flash.error
-                div.error #{flash.error}
+            if errorMsg
+                div.error #{errorMsg}
 
         div.about
             p This software is based on the System App by Zalando, a free and open source tool.
