Fixed typo calling hideTooltip on the tooltip alerts. Other general changes on users and tools admin areas.

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -42,7 +42,7 @@ html
             // ----------------------------------------------------------------
             #tab-users.admin-tab(style="display:none")
                 h2 User management
-                h4 Create new user
+                h4.form-title Create new user
                 fieldset.edit
                     input#user-txt-display-name.username(type="text", placeholder="display name", title="Enter the user's display name or full name (NOT the username).")
                     input#user-txt-username.username(type="text", placeholder="username", title="Enter the username.")
