New /guest route. Updates to login and security modules.

--- a/assets/css/login.styl
+++ b/assets/css/login.styl
@@ -20,12 +20,13 @@
     // The login form box.
     form
         display block
-        margin 20px auto auto auto
+        margin 30px auto auto auto
         padding-right 5px
         width 260px
 
         div
             clear both
+            padding-top 5px
 
         label
             display inline-block
@@ -49,9 +50,12 @@
     div.about
         clear both
         padding-top 50px
+        a
+            margin-left 5px
 
     // Error message in red.
     .error
         color errorLightColor
         font-weight bold
+        height 20px
         padding 10px
