--- a/views/login.jade
+++ b/views/login.jade
@@ -23,5 +23,5 @@ html
             div.error #{errorMsg}
 
         div.about
-            p This software is based on the System App by Zalando, a free and open source tool.
-            a(href="http://systemapp.io") More info about the System App...
+            span This free and open-source software is based on the System App by Zalando.
+            a(href="http://systemapp.io",target="systemapp.io") More...
